Refs #55564 fix content tags spacings

--- a/sass/entities/_node-common.scss
+++ b/sass/entities/_node-common.scss
@@ -82,7 +82,7 @@ $margin24: (
         margin: 0 -0.25rem -1rem;
 
         li {
-          padding: 0 0.25rem 1rem;
+          padding: 0 0.25rem 0.5rem;
         }
       }
     }
